--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  flutter_icons: ^1.1.0
+  cloud_firestore: ^4.5.2
+  firebase_storage: ^11.1.1
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
+  get_it: ^7.3.0
+  flutter_svg: ^1.1.6
+  image_picker: ^0.8.7+4
+  uuid: ^3.0.7
+  cached_network_image: ^3.2.3
+  fluttertoast: ^8.2.1
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
